# CPSR-Lite

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
benchmarks/: .gitignore  README.md  aggregate.sh  run.sh
bundler/: Cargo.toml
bundler-js/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json
bundler-js/src/: arciumClient.ts  cli.ts  encrypt.ts  types.ts
bundler-js/src/__tests__/: arciumClient.test.ts  types.test.ts
bundler/examples/: rollup_cli.rs  serializer_golden.rs
bundler/src/: alt.rs  config.rs  fee.rs  lib.rs  sender.rs  serializer.rs
bundler/src/alt/: table_catalog.rs
bundler/src/chunking/: mod.rs
bundler/src/dag/: mod.rs
bundler/src/er/: bhfa.rs  mod.rs  router_client.rs
bundler/src/fee_oracles/: mod.rs  recent.rs
bundler/src/occ/: mod.rs  rpc_fetcher.rs
bundler/src/pipeline/: blockhash.rs  emitter.rs  mod.rs  mpc.rs  rollup.rs
bundler/src/runtime/: config.rs  executor.rs  mod.rs  occ_guard.rs  planner.rs  serializer.rs  sources.rs  storage.rs
bundler/src/serializer/: precheck.rs
bundler/tests/: mpc_e2e.rs  mpc_schema.rs  privacy.rs
crates/adapter-api/: Cargo.toml
crates/adapter-api/src/: lib.rs
crates/estimator/: Cargo.toml
crates/estimator/src/: config.rs  cost.rs  lib.rs  size.rs
crates/types/: Cargo.toml
crates/types/src/: bundle.rs  hash.rs  intent.rs  lib.rs  merkle.rs  serde.rs  version.rs
programs/confidential_planner/: .gitignore  Anchor.toml  Cargo.toml  README.md
programs/confidential_planner/encrypted-ixs/: Cargo.toml
programs/confidential_planner/encrypted-ixs/src/: lib.rs  plan_chunk.rs
programs/confidential_planner/programs/confidential_planner/: Cargo.toml
programs/confidential_planner/programs/confidential_planner/src/: lib.rs
programs/confidential_planner/tests/: confidential_planner.ts
sdk/: .gitignore
