[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

# Prevent Cargo from auto-picking up src/bin/*.rs files as binaries
autobins = false

# (Optional) If/when you really want a CLI, declare it explicitly:
# [[bin]]
# name = "cpsr-lite-runner"
# path = "src/bin/cpsr-lite-runner.rs"

[lib]
name = "bundler"
path = "src/lib.rs"


[dependencies]
anyhow = "1"
thiserror = "1"
# Match the Solana version you use across the repo
solana-program = "1.18.26"
cpsr_types = { package = "cpsr-types", path = "../crates/types" }
blake3 = "1"                 # <-- add this
solana-pubkey = "2"
ctrlc = "3.4"
rand = "0.8"
estimator  = { package = "cpsr-estimator", path = "../crates/estimator" }
solana-sdk    = "1.18"
solana-client = "1.18"
bincode = "1"
hex = "0.4"  
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
url = "2"
bs58 = "0.4"
base64 = "0.21"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
chrono = { version = "0.4", features = ["clock"] }
