[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

[workspace.dependencies]
base64ct = "=1.7.3"

[patch.crates-io]
proc-macro2 = { git = "https://github.com/arcium-hq/proc-macro2.git" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
